Add prduct name and price

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
       <div class="container">
 
         <h1> {{title}} </h1>
-				
+		<h2> {{promo}}	
+		<div class="col-md-6">
+          <div class="thumbnail">
+            <img src="img/the-book-of-trees.jpg">
+            <p class="title"> {{product.name}}</p>
+            <p class="price">{{product.price}} </p>
+            <p class="date"> </p>
+          </div>
+        </div>
       </div>
     </div>
 
